--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,27 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .App {
   text-align: center;
+}
+
+.menu{
+  display: flex;
+  /* border: 1px solid black; */
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.content{
+  flex: 6;
+  /* width: 100%; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
