--- a/src/componet/Carousel/Carousel.module.css
+++ b/src/componet/Carousel/Carousel.module.css
@@ -1,6 +1,7 @@
 .Carousel{
     /* box-sizing: border-box;
     padding: 0px 20px 20px 20px; */
+    /* border: 1px solid black; */
 }
 
 .Carousel .content{
@@ -47,8 +48,8 @@
 }
 
 
-.productSlider img{
-    height: 150px;
+img{
+    height: 500px;
 }
 
 
@@ -60,4 +61,48 @@
     border-radius: "10px";
     background-size: "cover";
     background-position: "center";
+}
+
+
+/* ADD SLIde CO */
+.slider{
+    width: 1300px;
+    max-width: 100vw;
+    height: 700px;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+.slider .list{
+    position: absolute;
+    width: max-content;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    transition: 1s;
+}
+.slider .list img{
+    width: 1300px;
+    max-width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+.slider .buttons{
+    position: absolute;
+    top: 45%;
+    left: 5%;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+.slider .buttons button{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff5;
+    color: #fff;
+    border: none;
+    font-family: monospace;
+    font-weight: bold;
 }
