--- a/src/componet/DataOrder/DataOrder.module.css
+++ b/src/componet/DataOrder/DataOrder.module.css
@@ -1,20 +1,84 @@
 .dataOrder{
-    width: 20%;
+    width: 30%;
     top: 50px;
-    right: 50px;
+    right: 0px;
     position: absolute;
     border: 1px solid black;
     background-color: gray;
     color: white;
     border-radius: 5px;
+    font-size: 14px;
+    overflow-y: scroll;
+    height: 90vh;
 }
 
 .dataOrder .content{
     display: flex;
-    flex-direction: column;
-    text-align: left;
+    /* flex-direction: column; */
+    /* text-align: left; */
     padding: 4px;
+    /* border-bottom: 1px solid black; */
+}
+
+.dataOrder .contentCenter{
+    display: flex;
+    width: 100%;
+    padding: 5px;
+    justify-content: space-between;
+    /* border: 1px solid black; */
+}
+
+.contentCenterItem{
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* border: 1px solid black; */
+}
+
+.contentCenterItem .delete{
+    cursor: pointer;
+}
+
+.contentCenterItem .average{
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px solid black; */
+}
+
+.contentCenterItem .average span{
+    /* border: 1px solid black; */
+    color: black;
+    background-color: rgb(233, 228, 228);
+    width: 32%;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.contentCenterItem .average span:nth-child(1),
+.contentCenterItem .average span:nth-child(3){
+    cursor: pointer;
+}
+
+.contentCenterItem .average span:nth-child(1):hover,
+.contentCenterItem .average span:nth-child(3):hover{
+    background-color: rgb(197, 193, 193);
+}
+
+.imgOrder img{
+    width: 100px;
+    height: 100px;
+    border-radius: 3px;
+}
+
+.keterangan{
+    padding: 5px;
     border-bottom: 1px solid black;
+}
+
+.keterangan .keteranganItem{
+    display: flex;
+    justify-content: space-between;
 }
 
 /* Input Data */
