--- a/src/componet/ContactUs/ContactUs.module.css
+++ b/src/componet/ContactUs/ContactUs.module.css
@@ -91,9 +91,12 @@
 }
 
 .contactForm .inputBox input:focus ~ span,
-.contactForm .inputBox textarea:focus ~ span{
-  color: #e91e63;
-  font-size: 12px;
+.contactForm .inputBox textarea:focus ~ span,
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox textarea:valid ~ span{
+  color: #00bcd4;
+  font-size: 14px;
   transform: translateY(-20px);
 }
 
