--- a/src/page/OrderAdmin/OrderAdmin.module.css
+++ b/src/page/OrderAdmin/OrderAdmin.module.css
@@ -314,3 +314,91 @@
 .page .after:hover{
     background-color: rgb(150, 148, 148);
 }
+
+.containerPopUpStatus{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    background-color: rgba(100, 100, 100, .8);
+}
+
+.containerPopUpStatus .contentStatus{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 130px;
+    width: 25%;
+    height: max-content;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 2px 2px rgba(100, 100, 100, .8);
+    padding: 15px 30px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.containerPopUpStatus .contentStatus p:nth-child(1){
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.containerPopUpStatus .contentStatus p:nth-child(1) span{
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.containerPopUpStatus .contentStatus p:nth-child(1) span:hover{
+    background-color: rgb(200, 196, 196);
+}
+
+.containerPopUpStatus .contentStatus .judul{
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 16px;
+    color: black;
+}
+
+.containerPopUpStatus .contentStatus .item{
+    display: flex;
+    /* border: 1px solid black; */
+    align-items:start;
+}
+
+.containerPopUpStatus .contentStatus .item input{
+    margin-top: 5px;
+    margin-right: 10px;
+}
+
+
+.containerPopUpStatus .contentStatus .item div{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.containerPopUpStatus .contentStatus .item div label{
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.containerPopUpStatus .contentStatus .item div span{
+    font-size: 15px;
+}
+
+.containerPopUpStatus .contentStatus .button{
+    background-color: greenyellow;
+    padding: 10px 0;
+    outline: none;
+    border: none;
+    border-radius: 40px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.containerPopUpStatus .contentStatus .button:hover{
+    background-color: rgb(157, 236, 38);
+}
