--- a/src/page/ProductAdmin/ProductAdmin.module.css
+++ b/src/page/ProductAdmin/ProductAdmin.module.css
@@ -135,6 +135,10 @@
     /* border: 1px solid black; */
 }
 
+.card{
+    /* border: 1px solid black; */
+}
+
 .card .popup{
     list-style: none;
     position: absolute;
@@ -193,4 +197,135 @@
 
 .optionCard span:hover{
     background-color: greenyellow;
+}
+
+.contrainerPopUpProduct{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    background-color: rgba(100, 100, 100, .8);
+}
+
+.contrainerPopUpProduct .contentPopUpProduct{
+    margin: auto;
+    margin-top: 50px;
+    width: 40%;
+    height: 500px;
+    overflow-y: scroll;
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 0 2px 2px rgba(100, 100, 100, .8);
+    padding: 10px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .top span{
+    cursor: pointer;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body{
+    /* border: 1px solid black; */
+    padding: 2px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .item{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Alata', sans-serif;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .gambarProduct{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Alata', sans-serif;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .item label{
+    font-weight: 500;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .item input{
+    margin-bottom: 5px;
+    border-radius: 10px;
+    outline: none;
+    height: 35px;
+    padding-left: 10px;
+    border: 1px solid gray;
+    font-size: 15px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .item select{
+    margin-bottom: 5px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 15px;
+    height: 35px;
+    padding-left: 10px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .item textarea{
+    margin-bottom: 5px;
+    border-radius: 10px;
+    font-size: 15px;
+    outline: none;
+    height: 100px;
+    padding-left: 10px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .gambarProduct label:nth-child(2){
+    outline: none;
+    border: 1px dashed gray;
+    width: 130px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .gambarProduct .displayImage{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    position: relative;
+}
+.contrainerPopUpProduct .contentPopUpProduct .body .gambarProduct .displayImage img{
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+}
+
+
+.contrainerPopUpProduct .contentPopUpProduct .body .gambarProduct .displayImage span span{
+    position: absolute;
+    background-color: brown;
+    color: white;
+    cursor: pointer;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .button{
+    margin-top: 30px;
+    display: flex;
+    justify-content: right;
+    padding: 10px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .button input{
+    border-radius: 10px;
+    padding: 7px 20px;
+    border: none;
+    background-color: greenyellow;
+    box-shadow: 0 0 2px gray;
+    cursor: pointer;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .button input:hover{
+    background-color: rgb(145, 228, 20);
 }
