--- a/src/page/Customer/Customer.module.css
+++ b/src/page/Customer/Customer.module.css
@@ -1,6 +1,3 @@
-.container{
-    /* border: 1px solid black; */
-}
 
 .content{
     width: 80%;
@@ -171,6 +168,9 @@
 .ReadProductDetail .popup .content .image .itemImage{
     display: flex;
     /* border: 1px solid black; */
+    /* flex-wrap: wrap; */
+    overflow: hidden;
+    overflow-x: scroll;
     padding: 5px;
     margin: auto;
     gap: 5px;
@@ -193,9 +193,6 @@
     width: 100%;
     font-family: 'Outfit', sans-serif;
     text-align: left;
-}
-
-.ReadProductDetail .popup .detail .cardCategori{
 }
 
 .ReadProductDetail .popup .detail .cardJdl{
@@ -241,6 +238,11 @@
 .ReadProductDetail .popup .detail .contentBuktiBayar .pembayaran{
     /* border: 1px solid black; */
     padding: 5px 0;
+}
+
+.ReadProductDetail .popup .detail .contentBuktiBayar .pembayaran select{
+    border: 1px solid black;
+    border-radius: 3px;
 }
 
 .ReadProductDetail .popup .detail .contentBuktiBayar .itemBuktiBayar{
