--- a/src/page/ProductAdmin/ProductAdmin.module.css
+++ b/src/page/ProductAdmin/ProductAdmin.module.css
@@ -214,6 +214,21 @@
   padding: 2px;
 }
 
+.contrainerPopUpProduct .contentPopUpProduct .body .checkboxPermeter{
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.contrainerPopUpProduct .contentPopUpProduct .body .checkboxPermeter label{
+  margin: 0;
+
+}
+.contrainerPopUpProduct .contentPopUpProduct .body .checkboxPermeter input{
+  margin-left: 10px;
+  cursor: pointer;
+}
+
 .contrainerPopUpProduct .contentPopUpProduct .body .item {
   display: flex;
   flex-direction: column;
@@ -317,6 +332,165 @@
   background-color: brown;
   color: white;
   cursor: pointer;
+}
+
+.item .buttonAddBahanBakuProduk{
+  /* border: 1px solid black; */
+  background-color:rgb(211, 211, 49);
+  cursor: pointer;
+  width: max-content;
+  padding: 2px 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  box-shadow: 0 0 1px black;
+}
+
+.item .buttonAddBahanBakuProduk:hover{
+  background-color:rgb(168, 168, 31);
+}
+
+.item table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid gray;
+}
+
+.item table th {
+  padding: 13px 5px;
+  text-align: left;
+  font-size: 16px;
+  background-color: rgba(240, 240, 240, 0.941);
+}
+
+.item table th:nth-child(1) {
+  text-align: center;
+}
+
+.item table th:nth-child(5) {
+  text-align: center;
+}
+
+.item table td {
+  font-size: 15px;
+  color: var(--text-100);
+  padding: 10px 5px;
+}
+
+.item table tr {
+  border-bottom: 1px solid gray;
+}
+
+.item table td:nth-child(1) {
+  text-align: center;
+}
+
+.item table td:nth-child(2) {
+  max-width: 250px;
+  text-align: justify;
+}
+
+.item table td:nth-child(5) {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.item table tbody tr:hover {
+  background-color: aliceblue;
+}
+
+.item table tbody tr:hover td {
+  color: var(--text-300);
+}
+
+.iconOptions {
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 0px;
+  cursor: pointer;
+  font-size: 20px;
+  background-color: rgb(120, 118, 122);
+  color: rgb(228, 223, 223);
+  border-radius: 4px;
+}
+
+.contentPopUpBahanBaku{
+  width: 60%;
+  margin: 20px auto;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.itemContentOrderCustom {
+  display: flex;
+  flex-direction: column;
+}
+
+.itemContentOrderCustom label {
+  margin-top: 10px;
+}
+
+.itemContentOrderCustom .inputWrapper {
+  height: 40px;
+  border: none;
+  border: 1px solid rgba(118, 115, 115, 0.5);
+  border-radius: 10px;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+
+.itemContentOrderCustom .inputWrapper input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 15px;
+  width: 100%;
+  margin-left: 15px;
+  /* border: 1px solid gray; */
+}
+
+.itemContentOrderCustom .inputWrapper input:focus {
+  outline: none;
+}
+
+.itemContentOrderCustom .inputWrapper #searchIcon {
+  color: rgb(97, 97, 231);
+  /* border: 1px solid black; */
+}
+
+.itemContentOrderCustom .resultsList {
+  /* border: 1px solid black; */
+  width: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 8px #ddd;
+  border-radius: 10px;
+  margin-top: 1rem;
+  max-height: 150px;
+  overflow-y: auto;
+}
+
+.itemContentOrderCustom .resultsList .searchResult {
+  padding: 7px 15px;
+}
+
+.itemContentOrderCustom .resultsList .searchResult:hover {
+  background-color: #efefef;
+}
+
+.itemContentOrderCustom #input {
+  border-radius: 10px;
+  height: 40px;
+  outline: none;
+  border: 1px solid rgba(118, 115, 115, 0.5);
+  padding: 0px 10px;
 }
 
 .contrainerPopUpProduct .contentPopUpProduct .button {
