--- a/src/page/OrderAdmin/OrderAdmin.module.css
+++ b/src/page/OrderAdmin/OrderAdmin.module.css
@@ -210,6 +210,7 @@
   background-color: aquamarine;
   border-radius: 5px;
   color: rgb(45, 45, 145);
+  margin-right: 10px;
 }
 
 .iconOptions:nth-child(1):hover {
@@ -227,13 +228,13 @@
 }
 
 .iconOptions:nth-child(2) {
-  background-color: brown;
-  color: white;
+  background-color: rgb(215, 209, 33);
+  color: black;
   border-radius: 5px;
 }
 
 .iconOptions:nth-child(2):hover {
-  background-color: rgb(199, 77, 77);
+  background-color: rgb(194, 184, 9);
 }
 
 .diajukan {
@@ -323,7 +324,7 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 130px;
+  margin-top: 50px;
   width: 25%;
   height: max-content;
   background-color: white;
@@ -363,14 +364,39 @@
   align-items: start;
 }
 
-.containerPopUpStatus .contentStatus .item input {
+.containerPopUpStatus .contentStatus .item div select {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.containerPopUpStatus .contentStatus .item div textarea {
   margin-top: 5px;
   margin-right: 10px;
+  /* width: 100%; */
+  border: 1px solid gray;
+  border-radius: 5px;
+  height: 60px;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.containerPopUpStatus .contentStatus .item div input {
+  margin-top: 5px;
+  margin-right: 10px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  height: 30px;
+  padding: 0px 5px;
+  font-size: 14px;
 }
 
 .containerPopUpStatus .contentStatus .item div {
   display: flex;
+  width: 100%;
   flex-direction: column;
+  /* border: 1px solid black; */
   margin-bottom: 20px;
 }
 
